#3 added db connection repository and tests